--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,24 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.example.geometry</groupId>
+                <artifactId>GeometryLibrary</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.example.geometry</groupId>
+                <artifactId>GeometryUtils</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.example.geometry</groupId>
+                <artifactId>ThreeDimensionalShapes</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
