--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             <dependency>
                 <groupId>com.example.geometry</groupId>
                 <artifactId>ThreeDimensionalShapes</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
