--- a/Geometry/ThreeDimensionalShapes/pom.xml
+++ b/Geometry/ThreeDimensionalShapes/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>ThreeDimensionalShapes</artifactId>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
